<?xml version="1.0"?>
<package format="2">
  <name>bosch_imu_driver</name>
  <version>1.0.1</version>
  <author>Michal Drwiega</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/bosch_imu_driver</url>

	<description>
  The package contains a driver for IMU Bosch BNO055.
  In the current version, only UART communication is supported.
	</description>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python-serial</exec_depend>
</package>

